crates/servicepoint_binding_uniffi/libraries/swift/servicepoint_binding_uniffiFFI.h

// ⚠️ Attention: If you change this #else block (ending in `#endif // def UNIFFI_SHARED_H`) you *must* ⚠️
// ⚠️ increment the version suffix in all instances of UNIFFI_SHARED_HEADER_V4 in this file.           ⚠️

typedef struct RustBuffer
{
    uint64_t capacity;
    uint64_t len;
    uint8_t *_Nullable data;
} RustBuffer;
// Error definitions
typedef struct RustCallStatus {
    int8_t code;
    RustBuffer errorBuf;
} RustCallStatus;
void uniffi_servicepoint_binding_uniffi_fn_method_brightnessgrid_fill(void*_Nonnull ptr, uint8_t value, RustCallStatus *_Nonnull out_status
);
uint8_t uniffi_servicepoint_binding_uniffi_fn_method_brightnessgrid_get(void*_Nonnull ptr, uint64_t x, uint64_t y, RustCallStatus *_Nonnull out_status
);
uint64_t uniffi_servicepoint_binding_uniffi_fn_method_brightnessgrid_height(void*_Nonnull ptr, RustCallStatus *_Nonnull out_status
);
void uniffi_servicepoint_binding_uniffi_fn_method_brightnessgrid_set(void*_Nonnull ptr, uint64_t x, uint64_t y, uint8_t value, RustCallStatus *_Nonnull out_status
);
uint64_t uniffi_servicepoint_binding_uniffi_fn_method_brightnessgrid_width(void*_Nonnull ptr, RustCallStatus *_Nonnull out_status
);
void*_Nonnull uniffi_servicepoint_binding_uniffi_fn_clone_chargrid(void*_Nonnull ptr, RustCallStatus *_Nonnull out_status
);
void uniffi_servicepoint_binding_uniffi_fn_free_chargrid(void*_Nonnull ptr, RustCallStatus *_Nonnull out_status
);
void*_Nonnull uniffi_servicepoint_binding_uniffi_fn_constructor_chargrid_clone(void*_Nonnull other, RustCallStatus *_Nonnull out_status
);
void*_Nonnull uniffi_servicepoint_binding_uniffi_fn_constructor_chargrid_load(RustBuffer data, RustCallStatus *_Nonnull out_status
);
void*_Nonnull uniffi_servicepoint_binding_uniffi_fn_constructor_chargrid_new(uint64_t width, uint64_t height, RustCallStatus *_Nonnull out_status
);
RustBuffer uniffi_servicepoint_binding_uniffi_fn_method_chargrid_as_string(void*_Nonnull ptr, RustCallStatus *_Nonnull out_status
);
int8_t uniffi_servicepoint_binding_uniffi_fn_method_chargrid_equals(void*_Nonnull ptr, void*_Nonnull other, RustCallStatus *_Nonnull out_status
);
void uniffi_servicepoint_binding_uniffi_fn_method_chargrid_fill(void*_Nonnull ptr, RustBuffer value, RustCallStatus *_Nonnull out_status
);
RustBuffer uniffi_servicepoint_binding_uniffi_fn_method_chargrid_get(void*_Nonnull ptr, uint64_t x, uint64_t y, RustCallStatus *_Nonnull out_status
);
uint64_t uniffi_servicepoint_binding_uniffi_fn_method_chargrid_height(void*_Nonnull ptr, RustCallStatus *_Nonnull out_status
);
void uniffi_servicepoint_binding_uniffi_fn_method_chargrid_set(void*_Nonnull ptr, uint64_t x, uint64_t y, RustBuffer value, RustCallStatus *_Nonnull out_status
);
uint64_t uniffi_servicepoint_binding_uniffi_fn_method_chargrid_width(void*_Nonnull ptr, RustCallStatus *_Nonnull out_status
);
void*_Nonnull uniffi_servicepoint_binding_uniffi_fn_clone_command(void*_Nonnull ptr, RustCallStatus *_Nonnull out_status
);
void uniffi_servicepoint_binding_uniffi_fn_free_command(void*_Nonnull ptr, RustCallStatus *_Nonnull out_status
);
void*_Nonnull uniffi_servicepoint_binding_uniffi_fn_constructor_command_bitmap_linear(uint64_t offset, void*_Nonnull bitmap, RustBuffer compression, RustCallStatus *_Nonnull out_status
);
void*_Nonnull uniffi_servicepoint_binding_uniffi_fn_constructor_command_bitmap_linear_and(uint64_t offset, void*_Nonnull bitmap, RustBuffer compression, RustCallStatus *_Nonnull out_status
);
void*_Nonnull uniffi_servicepoint_binding_uniffi_fn_constructor_command_bitmap_linear_or(uint64_t offset, void*_Nonnull bitmap, RustBuffer compression, RustCallStatus *_Nonnull out_status
);
void*_Nonnull uniffi_servicepoint_binding_uniffi_fn_constructor_command_bitmap_linear_win(uint64_t offset_x, uint64_t offset_y, void*_Nonnull bitmap, RustBuffer compression, RustCallStatus *_Nonnull out_status
);
void*_Nonnull uniffi_servicepoint_binding_uniffi_fn_constructor_command_bitmap_linear_xor(uint64_t offset, void*_Nonnull bitmap, RustBuffer compression, RustCallStatus *_Nonnull out_status
);
void*_Nonnull uniffi_servicepoint_binding_uniffi_fn_constructor_command_brightness(uint8_t brightness, RustCallStatus *_Nonnull out_status
);
void*_Nonnull uniffi_servicepoint_binding_uniffi_fn_constructor_command_char_brightness(uint64_t offset_x, uint64_t offset_y, void*_Nonnull grid, RustCallStatus *_Nonnull out_status
);
void*_Nonnull uniffi_servicepoint_binding_uniffi_fn_constructor_command_clear(RustCallStatus *_Nonnull out_status
    
);
void*_Nonnull uniffi_servicepoint_binding_uniffi_fn_constructor_command_clone(void*_Nonnull other, RustCallStatus *_Nonnull out_status
);
void*_Nonnull uniffi_servicepoint_binding_uniffi_fn_constructor_command_cp437_data(uint64_t offset_x, uint64_t offset_y, void*_Nonnull grid, RustCallStatus *_Nonnull out_status
);
void*_Nonnull uniffi_servicepoint_binding_uniffi_fn_constructor_command_fade_out(RustCallStatus *_Nonnull out_status
    
);
void*_Nonnull uniffi_servicepoint_binding_uniffi_fn_constructor_command_hard_reset(RustCallStatus *_Nonnull out_status
    
);
int8_t uniffi_servicepoint_binding_uniffi_fn_method_command_equals(void*_Nonnull ptr, void*_Nonnull other, RustCallStatus *_Nonnull out_status
);
void*_Nonnull uniffi_servicepoint_binding_uniffi_fn_clone_connection(void*_Nonnull ptr, RustCallStatus *_Nonnull out_status
);
void uniffi_servicepoint_binding_uniffi_fn_free_connection(void*_Nonnull ptr, RustCallStatus *_Nonnull out_status
);
void*_Nonnull uniffi_servicepoint_binding_uniffi_fn_constructor_connection_new(RustBuffer host, RustCallStatus *_Nonnull out_status
);
void*_Nonnull uniffi_servicepoint_binding_uniffi_fn_constructor_connection_new_fake(RustCallStatus *_Nonnull out_status
    
);
void uniffi_servicepoint_binding_uniffi_fn_method_connection_send(void*_Nonnull ptr, void*_Nonnull command, RustCallStatus *_Nonnull out_status
);
void*_Nonnull uniffi_servicepoint_binding_uniffi_fn_clone_cp437grid(void*_Nonnull ptr, RustCallStatus *_Nonnull out_status
);
void uniffi_servicepoint_binding_uniffi_fn_free_cp437grid(void*_Nonnull ptr, RustCallStatus *_Nonnull out_status
);
void*_Nonnull uniffi_servicepoint_binding_uniffi_fn_constructor_cp437grid_clone(void*_Nonnull other, RustCallStatus *_Nonnull out_status
);
void*_Nonnull uniffi_servicepoint_binding_uniffi_fn_constructor_cp437grid_load(uint64_t width, uint64_t height, RustBuffer data, RustCallStatus *_Nonnull out_status
);
void*_Nonnull uniffi_servicepoint_binding_uniffi_fn_constructor_cp437grid_new(uint64_t width, uint64_t height, RustCallStatus *_Nonnull out_status
);
RustBuffer uniffi_servicepoint_binding_uniffi_fn_method_cp437grid_copy_raw(void*_Nonnull ptr, RustCallStatus *_Nonnull out_status
);
int8_t uniffi_servicepoint_binding_uniffi_fn_method_cp437grid_equals(void*_Nonnull ptr, void*_Nonnull other, RustCallStatus *_Nonnull out_status
);
void uniffi_servicepoint_binding_uniffi_fn_method_cp437grid_fill(void*_Nonnull ptr, uint8_t value, RustCallStatus *_Nonnull out_status
);