crates/servicepoint_binding_uniffi/libraries/python/servicepoint_binding_uniffi.py

_UniffiLib.uniffi_servicepoint_binding_uniffi_fn_method_brightnessgrid_fill.argtypes = (
    ctypes.c_void_p,
    ctypes.c_uint8,
    ctypes.POINTER(_UniffiRustCallStatus),
)
_UniffiLib.uniffi_servicepoint_binding_uniffi_fn_method_brightnessgrid_fill.restype = None
_UniffiLib.uniffi_servicepoint_binding_uniffi_fn_method_brightnessgrid_get.argtypes = (
    ctypes.c_void_p,
    ctypes.c_uint64,
    ctypes.c_uint64,
    ctypes.POINTER(_UniffiRustCallStatus),
)
_UniffiLib.uniffi_servicepoint_binding_uniffi_fn_method_brightnessgrid_get.restype = ctypes.c_uint8
_UniffiLib.uniffi_servicepoint_binding_uniffi_fn_method_brightnessgrid_height.argtypes = (
    ctypes.c_void_p,
    ctypes.POINTER(_UniffiRustCallStatus),
)
_UniffiLib.uniffi_servicepoint_binding_uniffi_fn_method_brightnessgrid_height.restype = ctypes.c_uint64
_UniffiLib.uniffi_servicepoint_binding_uniffi_fn_method_brightnessgrid_set.argtypes = (
    ctypes.c_void_p,
    ctypes.c_uint64,
    ctypes.c_uint64,
    ctypes.c_uint8,
    ctypes.POINTER(_UniffiRustCallStatus),
)
_UniffiLib.uniffi_servicepoint_binding_uniffi_fn_method_brightnessgrid_set.restype = None
_UniffiLib.uniffi_servicepoint_binding_uniffi_fn_method_brightnessgrid_width.argtypes = (
    ctypes.c_void_p,
    ctypes.POINTER(_UniffiRustCallStatus),
)
_UniffiLib.uniffi_servicepoint_binding_uniffi_fn_method_brightnessgrid_width.restype = ctypes.c_uint64
_UniffiLib.uniffi_servicepoint_binding_uniffi_fn_clone_chargrid.argtypes = (
    ctypes.c_void_p,
    ctypes.POINTER(_UniffiRustCallStatus),
)
_UniffiLib.uniffi_servicepoint_binding_uniffi_fn_clone_chargrid.restype = ctypes.c_void_p
_UniffiLib.uniffi_servicepoint_binding_uniffi_fn_free_chargrid.argtypes = (
    ctypes.c_void_p,
    ctypes.POINTER(_UniffiRustCallStatus),
)
_UniffiLib.uniffi_servicepoint_binding_uniffi_fn_free_chargrid.restype = None
_UniffiLib.uniffi_servicepoint_binding_uniffi_fn_constructor_chargrid_clone.argtypes = (
    ctypes.c_void_p,
    ctypes.POINTER(_UniffiRustCallStatus),
)
_UniffiLib.uniffi_servicepoint_binding_uniffi_fn_constructor_chargrid_clone.restype = ctypes.c_void_p
_UniffiLib.uniffi_servicepoint_binding_uniffi_fn_constructor_chargrid_load.argtypes = (
    _UniffiRustBuffer,
    ctypes.POINTER(_UniffiRustCallStatus),
)
_UniffiLib.uniffi_servicepoint_binding_uniffi_fn_constructor_chargrid_load.restype = ctypes.c_void_p
_UniffiLib.uniffi_servicepoint_binding_uniffi_fn_constructor_chargrid_new.argtypes = (
    ctypes.c_uint64,
    ctypes.c_uint64,
    ctypes.POINTER(_UniffiRustCallStatus),
)
_UniffiLib.uniffi_servicepoint_binding_uniffi_fn_constructor_chargrid_new.restype = ctypes.c_void_p
_UniffiLib.uniffi_servicepoint_binding_uniffi_fn_method_chargrid_as_string.argtypes = (
    ctypes.c_void_p,
    ctypes.POINTER(_UniffiRustCallStatus),
)
_UniffiLib.uniffi_servicepoint_binding_uniffi_fn_method_chargrid_as_string.restype = _UniffiRustBuffer
_UniffiLib.uniffi_servicepoint_binding_uniffi_fn_method_chargrid_equals.argtypes = (
    ctypes.c_void_p,
    ctypes.c_void_p,
    ctypes.POINTER(_UniffiRustCallStatus),
)
_UniffiLib.uniffi_servicepoint_binding_uniffi_fn_method_chargrid_equals.restype = ctypes.c_int8
_UniffiLib.uniffi_servicepoint_binding_uniffi_fn_method_chargrid_fill.argtypes = (
    ctypes.c_void_p,
    _UniffiRustBuffer,
    ctypes.POINTER(_UniffiRustCallStatus),
)
_UniffiLib.uniffi_servicepoint_binding_uniffi_fn_method_chargrid_fill.restype = None
_UniffiLib.uniffi_servicepoint_binding_uniffi_fn_method_chargrid_get.argtypes = (
    ctypes.c_void_p,
    ctypes.c_uint64,
    ctypes.c_uint64,
    ctypes.POINTER(_UniffiRustCallStatus),
)
_UniffiLib.uniffi_servicepoint_binding_uniffi_fn_method_chargrid_get.restype = _UniffiRustBuffer
_UniffiLib.uniffi_servicepoint_binding_uniffi_fn_method_chargrid_height.argtypes = (
    ctypes.c_void_p,
    ctypes.POINTER(_UniffiRustCallStatus),
)
_UniffiLib.uniffi_servicepoint_binding_uniffi_fn_method_chargrid_height.restype = ctypes.c_uint64
_UniffiLib.uniffi_servicepoint_binding_uniffi_fn_method_chargrid_set.argtypes = (
    ctypes.c_void_p,
    ctypes.c_uint64,
    ctypes.c_uint64,
    _UniffiRustBuffer,
    ctypes.POINTER(_UniffiRustCallStatus),
)
_UniffiLib.uniffi_servicepoint_binding_uniffi_fn_method_chargrid_set.restype = None
_UniffiLib.uniffi_servicepoint_binding_uniffi_fn_method_chargrid_width.argtypes = (
    ctypes.c_void_p,
    ctypes.POINTER(_UniffiRustCallStatus),
)
_UniffiLib.uniffi_servicepoint_binding_uniffi_fn_method_chargrid_width.restype = ctypes.c_uint64
_UniffiLib.uniffi_servicepoint_binding_uniffi_fn_clone_command.argtypes = (
    ctypes.c_void_p,
    ctypes.POINTER(_UniffiRustCallStatus),
)
_UniffiLib.uniffi_servicepoint_binding_uniffi_fn_clone_command.restype = ctypes.c_void_p
_UniffiLib.uniffi_servicepoint_binding_uniffi_fn_free_command.argtypes = (
    ctypes.c_void_p,
    ctypes.POINTER(_UniffiRustCallStatus),
)
_UniffiLib.uniffi_servicepoint_binding_uniffi_fn_free_command.restype = None
_UniffiLib.uniffi_servicepoint_binding_uniffi_fn_constructor_command_bitmap_linear.argtypes = (
    ctypes.c_uint64,
    ctypes.c_void_p,
    _UniffiRustBuffer,
    ctypes.POINTER(_UniffiRustCallStatus),
)
_UniffiLib.uniffi_servicepoint_binding_uniffi_fn_constructor_command_bitmap_linear.restype = ctypes.c_void_p
_UniffiLib.uniffi_servicepoint_binding_uniffi_fn_constructor_command_bitmap_linear_and.argtypes = (
    ctypes.c_uint64,
    ctypes.c_void_p,
    _UniffiRustBuffer,
    ctypes.POINTER(_UniffiRustCallStatus),
)
_UniffiLib.uniffi_servicepoint_binding_uniffi_fn_constructor_command_bitmap_linear_and.restype = ctypes.c_void_p
_UniffiLib.uniffi_servicepoint_binding_uniffi_fn_constructor_command_bitmap_linear_or.argtypes = (
    ctypes.c_uint64,
    ctypes.c_void_p,
    _UniffiRustBuffer,
    ctypes.POINTER(_UniffiRustCallStatus),
)
_UniffiLib.uniffi_servicepoint_binding_uniffi_fn_constructor_command_bitmap_linear_or.restype = ctypes.c_void_p
_UniffiLib.uniffi_servicepoint_binding_uniffi_fn_constructor_command_bitmap_linear_win.argtypes = (
    ctypes.c_uint64,
    ctypes.c_uint64,
    ctypes.c_void_p,
    _UniffiRustBuffer,
    ctypes.POINTER(_UniffiRustCallStatus),
)
_UniffiLib.uniffi_servicepoint_binding_uniffi_fn_constructor_command_bitmap_linear_win.restype = ctypes.c_void_p
_UniffiLib.uniffi_servicepoint_binding_uniffi_fn_constructor_command_bitmap_linear_xor.argtypes = (
    ctypes.c_uint64,
    ctypes.c_void_p,
    _UniffiRustBuffer,
    ctypes.POINTER(_UniffiRustCallStatus),
)
_UniffiLib.uniffi_servicepoint_binding_uniffi_fn_constructor_command_bitmap_linear_xor.restype = ctypes.c_void_p
_UniffiLib.uniffi_servicepoint_binding_uniffi_fn_constructor_command_brightness.argtypes = (
    ctypes.c_uint8,
    ctypes.POINTER(_UniffiRustCallStatus),
)
_UniffiLib.uniffi_servicepoint_binding_uniffi_fn_constructor_command_brightness.restype = ctypes.c_void_p
_UniffiLib.uniffi_servicepoint_binding_uniffi_fn_constructor_command_char_brightness.argtypes = (
    ctypes.c_uint64,
    ctypes.c_uint64,
    ctypes.c_void_p,
    ctypes.POINTER(_UniffiRustCallStatus),
)
_UniffiLib.uniffi_servicepoint_binding_uniffi_fn_constructor_command_char_brightness.restype = ctypes.c_void_p
_UniffiLib.uniffi_servicepoint_binding_uniffi_fn_constructor_command_clear.argtypes = (
    ctypes.POINTER(_UniffiRustCallStatus),
)
_UniffiLib.uniffi_servicepoint_binding_uniffi_fn_constructor_command_clear.restype = ctypes.c_void_p
_UniffiLib.uniffi_servicepoint_binding_uniffi_fn_constructor_command_clone.argtypes = (
    ctypes.c_void_p,
    ctypes.POINTER(_UniffiRustCallStatus),
)
_UniffiLib.uniffi_servicepoint_binding_uniffi_fn_constructor_command_clone.restype = ctypes.c_void_p
_UniffiLib.uniffi_servicepoint_binding_uniffi_fn_constructor_command_cp437_data.argtypes = (
    ctypes.c_uint64,
    ctypes.c_uint64,
    ctypes.c_void_p,
    ctypes.POINTER(_UniffiRustCallStatus),
)
_UniffiLib.uniffi_servicepoint_binding_uniffi_fn_constructor_command_cp437_data.restype = ctypes.c_void_p
_UniffiLib.uniffi_servicepoint_binding_uniffi_fn_constructor_command_fade_out.argtypes = (
    ctypes.POINTER(_UniffiRustCallStatus),
)
_UniffiLib.uniffi_servicepoint_binding_uniffi_fn_constructor_command_fade_out.restype = ctypes.c_void_p
_UniffiLib.uniffi_servicepoint_binding_uniffi_fn_constructor_command_hard_reset.argtypes = (
    ctypes.POINTER(_UniffiRustCallStatus),
)
_UniffiLib.uniffi_servicepoint_binding_uniffi_fn_constructor_command_hard_reset.restype = ctypes.c_void_p
_UniffiLib.uniffi_servicepoint_binding_uniffi_fn_method_command_equals.argtypes = (
    ctypes.c_void_p,
    ctypes.c_void_p,
    ctypes.POINTER(_UniffiRustCallStatus),
)
_UniffiLib.uniffi_servicepoint_binding_uniffi_fn_method_command_equals.restype = ctypes.c_int8
_UniffiLib.uniffi_servicepoint_binding_uniffi_fn_clone_connection.argtypes = (
    ctypes.c_void_p,
    ctypes.POINTER(_UniffiRustCallStatus),
)
_UniffiLib.uniffi_servicepoint_binding_uniffi_fn_clone_connection.restype = ctypes.c_void_p
_UniffiLib.uniffi_servicepoint_binding_uniffi_fn_free_connection.argtypes = (
    ctypes.c_void_p,
    ctypes.POINTER(_UniffiRustCallStatus),
)
_UniffiLib.uniffi_servicepoint_binding_uniffi_fn_free_connection.restype = None
_UniffiLib.uniffi_servicepoint_binding_uniffi_fn_constructor_connection_new.argtypes = (
    _UniffiRustBuffer,
    ctypes.POINTER(_UniffiRustCallStatus),
)
_UniffiLib.uniffi_servicepoint_binding_uniffi_fn_constructor_connection_new.restype = ctypes.c_void_p
_UniffiLib.uniffi_servicepoint_binding_uniffi_fn_constructor_connection_new_fake.argtypes = (
    ctypes.POINTER(_UniffiRustCallStatus),
)
_UniffiLib.uniffi_servicepoint_binding_uniffi_fn_constructor_connection_new_fake.restype = ctypes.c_void_p
_UniffiLib.uniffi_servicepoint_binding_uniffi_fn_method_connection_send.argtypes = (
    ctypes.c_void_p,
    ctypes.c_void_p,
    ctypes.POINTER(_UniffiRustCallStatus),
)
_UniffiLib.uniffi_servicepoint_binding_uniffi_fn_method_connection_send.restype = None
_UniffiLib.uniffi_servicepoint_binding_uniffi_fn_clone_cp437grid.argtypes = (
    ctypes.c_void_p,
    ctypes.POINTER(_UniffiRustCallStatus),
)
_UniffiLib.uniffi_servicepoint_binding_uniffi_fn_clone_cp437grid.restype = ctypes.c_void_p
_UniffiLib.uniffi_servicepoint_binding_uniffi_fn_free_cp437grid.argtypes = (
    ctypes.c_void_p,
    ctypes.POINTER(_UniffiRustCallStatus),
)
_UniffiLib.uniffi_servicepoint_binding_uniffi_fn_free_cp437grid.restype = None
_UniffiLib.uniffi_servicepoint_binding_uniffi_fn_constructor_cp437grid_clone.argtypes = (
    ctypes.c_void_p,
    ctypes.POINTER(_UniffiRustCallStatus),
)
_UniffiLib.uniffi_servicepoint_binding_uniffi_fn_constructor_cp437grid_clone.restype = ctypes.c_void_p
_UniffiLib.uniffi_servicepoint_binding_uniffi_fn_constructor_cp437grid_load.argtypes = (
    ctypes.c_uint64,
    ctypes.c_uint64,
    _UniffiRustBuffer,
    ctypes.POINTER(_UniffiRustCallStatus),
)
_UniffiLib.uniffi_servicepoint_binding_uniffi_fn_constructor_cp437grid_load.restype = ctypes.c_void_p
_UniffiLib.uniffi_servicepoint_binding_uniffi_fn_constructor_cp437grid_new.argtypes = (
    ctypes.c_uint64,
    ctypes.c_uint64,
    ctypes.POINTER(_UniffiRustCallStatus),
)
_UniffiLib.uniffi_servicepoint_binding_uniffi_fn_constructor_cp437grid_new.restype = ctypes.c_void_p
_UniffiLib.uniffi_servicepoint_binding_uniffi_fn_method_cp437grid_copy_raw.argtypes = (
    ctypes.c_void_p,
    ctypes.POINTER(_UniffiRustCallStatus),
)
_UniffiLib.uniffi_servicepoint_binding_uniffi_fn_method_cp437grid_copy_raw.restype = _UniffiRustBuffer
_UniffiLib.uniffi_servicepoint_binding_uniffi_fn_method_cp437grid_equals.argtypes = (
    ctypes.c_void_p,
    ctypes.c_void_p,
    ctypes.POINTER(_UniffiRustCallStatus),
)
_UniffiLib.uniffi_servicepoint_binding_uniffi_fn_method_cp437grid_equals.restype = ctypes.c_int8
_UniffiLib.uniffi_servicepoint_binding_uniffi_fn_method_cp437grid_fill.argtypes = (
    ctypes.c_void_p,
    ctypes.c_uint8,
    ctypes.POINTER(_UniffiRustCallStatus),
)
_UniffiLib.uniffi_servicepoint_binding_uniffi_fn_method_cp437grid_fill.restype = None
